# discord-dungeon-master

./: Cargo.toml  Dockerfile  README.Docker.md  README.md  docker-compose.yaml
config/: config.yaml
migrations/: 20260323063002_create_character_sheet_table.sql  20260423081712_create_story_and_dialogue_tables.sql
prompts/: abilities.txt  add_character_abilities.txt  add_character_combat.txt  add_character_identity.txt  add_character_inventory.txt  add_character_meta.txt  add_character_notes.txt  add_character_progression.txt  add_character_skills.txt  add_character_traits.txt  combat.txt  identity.txt  inventory.txt  main.txt  main_followup.txt  meta.txt  new_dialogue.txt  new_summary.txt  notes.txt  progression.txt  skills.txt  traits.txt
src/: config.rs  error.rs  main.rs  pg_pool.rs
src/character/: entity.rs  error.rs  repository.rs  service.rs
src/character/entities/: abilities_block.rs  combat.rs  identity.rs  magic.rs  meta.rs  mod.rs  notes.rs  skills.rs  traits.rs
src/character/entity/: combat.rs  inventory.rs  magic.rs  mod.rs  progression.rs  skills.rs
src/character/snapshots/: discord_dungeon_master__character__service__test__integration.snap
src/discord_bot/: README.md  error.rs  handler.rs  mod.rs
src/discord_bot/commands/: characters.rs  mod.rs  ping.rs
src/llm/: error.rs  gemini.rs  mod.rs  types.rs
src/llm/snapshots/: discord_dungeon_master__llm__gemini__test__new_dialogue.snap  (+1 more)
src/story/: entity.rs  error.rs  mod.rs  repository.rs  service.rs
src/tool/: error.rs  mod.rs  service.rs  types.rs
