[package]
name = "discord-dungeon-master"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
msqlx = { version = "0.9.0-msqlx.1", features = ["runtime-tokio", "postgres", "macros", "json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.10"
rig-core = "0.3.0"
schemars = "1.2" # Required for Tool argument schemas
config = "0.15"
tracing = "0.1"
thiserror = "2"
eyre = "0"
serde_yaml = "0"
stable-eyre = "0.2.2"
strum = { version = "0.28.0", features = ["std", "derive", "strum_macros"] }
faux = "0.1.13"
insta = { version = "1.46.3", features = ["json"] }
async-trait = "0.1.89"
api_gemini = "0.5.0"
poise = "0.6"
serenity = { version = "0.12", features = ["client", "gateway", "interactions_endpoint", "cache"] }
chrono = "0.4.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
